# Lory

./: .gitignore  LICENSE  README.md
docs/: basic_settings.md  django_migration.md
lory/: asgi.py  main.py  manage.py  pyproject.toml  requirements.txt  settings.py  urls.py  wsgi.py
lory/lory/: asgi.py  settings.py  urls.py  wsgi.py
lory/posts/: models.py  serializers.py  urls.py  views.py
lory/posts/migrations/: 0001_initial.py  0002_alter_post_created_at.py  0003_remove_post_creator_id_post_creator.py
lory/posts/tests/: test_models.py  test_serializers.py  test_views.py
lory/users/: models.py  serializers.py  urls.py  views.py
lory/users/migrations/: 0001_initial.py  0002_remove_user_last_ip_remove_user_last_password_change_and_more.py  0003_remove_user_password_hash_alter_user_password.py  0004_alter_user_bio_alter_user_nickname_and_more.py
lory/users/services/: __init__.py  user_services.py
users/: urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_table.py
